--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/node": "^18.6.4"
+  },
+  "dependencies": {
+    "@types/prompt-sync": "^4.2.0",
+    "prompt-sync": "^4.2.0"
   }
 }
