--- a/package.json
+++ b/package.json
@@ -4,8 +4,5 @@
   "devDependencies": {
     "@types/node": "^18.6.4"
   },
-  "dependencies": {
-    "@types/prompt-sync": "^4.2.0",
-    "prompt-sync": "^4.2.0"
-  }
+  "dependencies": {}
 }
